syntax = "proto3";

package admin.freelancers.speciality.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "api/admin/freelancers/speciality/v1";

// -------------- Сервис по работе со специальностями докторов ---------------
service FreelancerAdminSpecialityService {
  rpc GetSpecialities(GetSpecialitiesRequest) returns (GetSpecialitiesResponse) {
    option (google.api.http) = {get: "/api/v1/admin/freelancers/specialities"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Получение специальностей фрилансеров"};
  }
  rpc SearchSpeciality(SearchSpecialityRequest) returns (SearchSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/specialities/search"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Поиск специальностей фрилансеров"};
  }
  rpc CreateSpeciality(CreateSpecialityRequest) returns (CreateSpecialityResponse) {
    option (google.api.http) = {
      post: "/api/v1/admin/freelancers/specialities/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {summary: "Добавление специальности фрилансера"};
  }
}

message GetSpecialitiesRequest {}

message GetSpecialitiesResponse {
  repeated SpecialityItem specialities = 1;

  message SpecialityItem {
    int64 id = 1;
    string name = 2;
  }
}

message SearchSpecialityRequest {
  string query = 1;
}

message SearchSpecialityResponse {
  repeated SpecialityItem specialities = 1;

  message SpecialityItem {
    int64 id = 1;
    string name = 2;
  }
}

message CreateSpecialityRequest {
  string name = 1;
}

message CreateSpecialityResponse {
  int64 id = 1;
}
